--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "npm install && npm build"
+    "dev": "npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
