--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "khadija-cf-react",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+  "proxy":"http://192.168.3.228:5000",
+
+    "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
@@ -16,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build", 
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "npm install && npm run build"
